test/corpus/program.txt
====================================
Empty pattern
====================================

{}

------------------------------------

(program
  (rule
    (block)))

====================================
Empty block
====================================

NR == 1

------------------------------------

(program
  (rule
    (pattern
      (binary_exp
         (identifier)
         (number)))))

====================================
Directives
====================================

@include "file1"
@load "file2"
@namespace "ns"

------------------------------------

(program
  (directive
    (string))
  (directive
    (string))
  (directive
    (string)))

====================================
Line continuation
====================================

\
BEGIN {}

------------------------------------

(program
  (rule
    (pattern)
    (block)))
